# ros_idx6dof

./: .gitignore  .rosinstall  LICENSE
beginner_tutorials/: package.xml
devel/: .catkin  .rosinstall  _setup_util.py  setup.sh
devel/include/arm/: Command.h  IKService.h  IKServiceRequest.h  IKServiceResponse.h  SwitchPos.h  Switches.h
devel/include/idxpendant/: SwitchPos.h  SwitchRequest.h  SwitchRequestRequest.h  SwitchRequestResponse.h  SwitchSrv.h  SwitchSrvRequest.h  SwitchSrvResponse.h  SwitchesSrv.h  SwitchesSrvRequest.h  SwitchesSrvResponse.h  SwitchsSrv.h  SwitchsSrvRequest.h  SwitchsSrvResponse.h
idxlib/: idx_command.cpp  idx_command.h  idx_encoder.cpp  idx_encoder.h  idx_quadgen.h  idx_stepper.h
keyboard controls/keyboard_action/: CMakeLists.txt  package.xml
motor_cmd/launch/: motor_sim.launch
motor_cmd/src/: motor_cmd_pub  motor_command_sim.py
src/: .rosinstall  armbot.dae  cmdinterpreter.py  env.env.xml  ik.py
src/arm/: CMakeLists.txt  package.xml
src/arm/msg/: Command.msg  SwitchPos.msg
src/arm/src/: armbot-simple.urdf  armbot.kinbody.xml  armbot.launch  armbot.urdf  env.env.xml  ik.py  ikfast_output_path.cpp  iksolver.py  iksolverservicetester.py  pendantcontroller.py  robotcontroller.py
src/arm/srv/: IKService.srv
src/idxconfig/: CMakeLists.txt  Main.perspective  devel.launch  motion_control.launch  package.xml
src/idxconfig/Simulation/: BusbotArm.dae  BusbotSimpleArm.urdf.txt  BusbotVREPscene.ttt  BusbotVREPsceneBigJoints.ttt  BusbotVREPsceneBigJointsNoImpact.ttt  BusbotVREPscene_JUST_JOINTS.ttt  CorrectedJointLocations.urdf.txt  Joint Space Locations.xlsx
src/idxconfig/Simulation/Arm Inventor files/: Forearm.dwg  Forearm.ipt  Shoulder1 Link.dwg  Shoulder1 Link.ipt  Shoulder2 Link.dwg  Shoulder2 Link.ipt  Waist Link.dwg  Waist Link.ipt  Wrist Link 1.dwg  Wrist1.ipt  lockfile.lck  ~Forearm.dwg.13200.tmp  ~Shoulder1 Link.dwg.13200.tmp  ~Shoulder1 Link.dwg.9372.tmp  ~Shoulder2 Link.dwg.13200.tmp  ~Shoulder2 Link.dwg.9372.tmp  ~Waist Link.dwg.13200.tmp  ~Waist Link.dwg.9372.tmp  ~Wrist Link 1.dwg.13200.tmp
src/idxconfig/Simulation/Arm Inventor files/OldVersions/: Forearm.0001.dwg  Shoulder1 Link.0001.ipt  Shoulder1 Link.0004.dwg  Shoulder2 Link.0004.dwg  Waist Link.0003.dwg  Wrist Link 1.0001.dwg
src/idxconfig/Simulation/Arm Inventor files/STL/: Forearm.stl  Shoulder1 Link.stl  Shoulder2 Link.stl  Waist Link.stl  Wrist1.stl
src/idxconfig/Simulation/Large Insert Sections/: Forearm-lrg.ipt  Large Section Scene.ttt  Shoulder1 Link-lrg.ipt  Shoulder2 Link-lrg.ipt  Waist Link-lrg.ipt  Wrist1-lrg.ipt
src/idxconfig/Simulation/Large Insert Sections/OldVersions/: Forearm-lrg.0001.ipt
src/idxconfig/Simulation/Large Insert Sections/STL-lrg/: Forearm-lrg.stl  Shoulder1 Link-lrg.stl  Shoulder2 Link-lrg.stl  Waist Link-lrg.stl  Wrist1-lrg.stl
src/idxconfig/Simulation/STL/: Forearm-lrg.ipt  arm1.stl  arm2.stl  arm3.stl  arm4.stl  base.stl  experimental tip.stl
src/idxconfig/scripts/: motor_cmd_pub  move_joints_sim.py  test_api.py  vrep.py
src/idxencoders/: CMakeLists.txt  package.xml
src/idxpendant/: CMakeLists.txt  package.xml
src/idxpendant/firmware/: CMakeLists.txt  idx_pendant.cpp  pendant.cpp
src/idxpendant/msg/: SwitchPos.msg
src/idxpendant/src/: pendant.py  pendant_mover.py  pendant_node.py  util.py
src/idxpendant/srv/: SwitchSrv.srv  SwitchesSrv.srv
src/idxrobot/: CMakeLists.txt  package.xml
src/idxrobot/firmware/: CMakeLists.txt  chatter.cpp
src/idxrobot/launch/: idxrobot.launch
src/idxrobot/msg/: Command.msg  Log.msg  MotionCommand.msg  Position.msg
src/idxrobot/src/: serial_node.py  (+2 more)
src/idxtest/: CMakeLists.txt  package.xml
src/ikfastplug/: CMakeLists.txt  ikrobo.cpp  package.xml
src/joy_motion/: CMakeLists.txt  package.xml
src/keyboard_action/: CMakeLists.txt  package.xml
src/keyboard_action/launch/: key_control.launch
src/keyboard_action/msg/: controls.msg
src/keyboard_action/src/: keyboard_action_sub.cpp
src/motion_control/: CMakeLists.txt  motion_control.launch  package.xml
src/motor_cmd/: CMakeLists.txt  package.xml
src/ros-keyboard/: CMakeLists.txt
trajectory/: requirements.txt
trajectory/test/: test.py
trajectory/trajectory/: encoders.py  joystick.py  messages.py  proto.py  segments.py  sim.py
trajectory/trajectory.egg-info/: SOURCES.txt
(+90 files in other folders)
