<?xml version="1.0"?>
<package>
  <name>idxconfig</name>
  <version>0.0.0</version>
  <description>The idxconfig package</description>

  <maintainer email="eric@busboom.org">Eric Busboom</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>

  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>